--- a/README.ms
+++ b/README.ms
@@ -9,5 +9,10 @@
 - install requirements from requirements.txt
 - run main.py
 
+## Run project via docker
+- copy repo to local machine
+- docker-compose build
+- docker-compose up -d
+
 ## Api doc
 - http://127.0.0.1:9000/docs#/
